--- a/flutter_application/pubspec.yaml
+++ b/flutter_application/pubspec.yaml
@@ -1,10 +1,10 @@
 name: flutter_application
 description: "A new Flutter project."
-publish_to: 'none'
+publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: '>=3.4.3 <4.0.0'
+  sdk: ">=3.4.3 <4.0.0"
 
 dependencies:
   flutter:
@@ -29,3 +29,14 @@ flutter:
     - assets/banana.png
     - assets/avocado.png
     - assets/salmon.png
+    - assets/cake.png
+    - assets/fish.png
+    - assets/fruits.png
+    - assets/ice.png
+    - assets/juice.png
+    - assets/mango.png
+    - assets/meat.png
+    - assets/milk.png
+    - assets/seafood.png
+    - assets/strawbery.png
+    - assets/vegetables.png
